--- a/nginx/templates/default/nginx.conf.erb
+++ b/nginx/templates/default/nginx.conf.erb
@@ -3,7 +3,7 @@
 #   * Official Russian Documentation: http://nginx.org/ru/docs/
 
 user  nginx;
-worker_processes  1;
+worker_processes  <%= @node[:nginx][:worker_processes] %>;
 
 error_log  /var/log/nginx/error.log;
 
