--- a/cookbooks/meducation-website/templates/default/nginx.conf.erb
+++ b/cookbooks/meducation-website/templates/default/nginx.conf.erb
@@ -5,7 +5,9 @@ upstream <%= @name %> {
 server {
  
   listen 80;
-  server_name <%= @server_names %>;
+  
+  client_max_body_size 4G;
+  server_name <%= @server_name %>;
 
   root <%= @app_root %>/current/public;
 
@@ -13,24 +15,28 @@ server {
   error_log  <%= @app_root %>/shared/log/error.log;
   
   location / {
+  
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header Host $http_host;
+    proxy_redirect off;
+    proxy_pass http://<%= @name %>;
 
-    if (-f $request_filename) {
-       break;
-     }
+    #if (-f $request_filename) {
+    #//   break;
+    #// }
 
-     if (!-f $request_filename) {
-       proxy_pass http://<%= @name %>;
-       break;
-     }
+    #// if (!-f $request_filename) {
+    #//   proxy_pass http://<%= @server_name %>;
+    #//   break;
+    #// }
    }
 
   error_page  500 502 503 504 /500.html;
-  error_page  404 /404.html;
-
   location = /500.html {
     root  <%= @app_root %>/current/public;
   }
 
+  error_page  404 /404.html;
   location = /400.html {
     root  <%= @app_root %>/current/public;
   }
