Improve nginx files

--- a/cookbooks/meducation-website/templates/default/nginx.conf.erb
+++ b/cookbooks/meducation-website/templates/default/nginx.conf.erb
@@ -1,19 +1,35 @@
 upstream <%= @name %> {
-  server unix:<%= @app_root %>/shared/sockets/unicorn.sock; # fail_timeout=0;
+  server unix:<%= @app_root %>/shared/sockets/unicorn.sock fail_timeout=0;
+}
+
+server {
+    listen 80;
+    server_name www.meducation.net meducation.net;
+
+    rewrite ^(.*) https://www.meducation.net$1 permanent;
 }
 
 server {
  
-  listen 80;
+  listen 443 ssl default;
+  server_name <%= @server_name %>;
+  root <%= @app_root %>/current/website/public;
   
   client_max_body_size 4G;
-  server_name <%= @server_name %>;
-
-  #root <%= @app_root %>/current/public;
 
   access_log <%= @app_root %>/shared/log/access.log combined;
   error_log  <%= @app_root %>/shared/log/error.log;
   
+  ssl                  on;
+  ssl_certificate      /etc/nginx/certs/meducation-website.chained.crt;
+  ssl_certificate_key  /etc/nginx/certs/meducation-website.key;
+
+  ssl_session_timeout  5m;
+
+  ssl_protocols  SSLv2 SSLv3 TLSv1;
+  ssl_ciphers  HIGH:!aNULL:!MD5;
+  ssl_prefer_server_ciphers   on;
+
   location / {
   
     proxy_set_header HOST $host;
@@ -21,8 +37,9 @@ server {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
     proxy_set_header Host $http_host;
-    proxy_redirect off;
+
     proxy_pass http://<%= @name %>;
+    proxy_redirect off;
 
     #if (-f $request_filename) {
     #   break;
@@ -36,11 +53,11 @@ server {
 
   error_page  500 502 503 504 /500.html;
   location = /500.html {
-    root  <%= @app_root %>/current/public;
+    root  <%= @app_root %>/current/website/public;
   }
 
   error_page  404 /404.html;
   location = /400.html {
-    root  <%= @app_root %>/current/public;
+    root  <%= @app_root %>/current/website/public;
   }
 }
