Force naked to redirect to www

--- a/cookbooks/meducation-website/templates/default/nginx.conf.erb
+++ b/cookbooks/meducation-website/templates/default/nginx.conf.erb
@@ -5,7 +5,11 @@ upstream <%= @name %> {
 server {
     listen 80;
     server_name www.meducation.net meducation.net;
-
+    rewrite ^(.*) https://www.meducation.net$1 permanent;
+}
+server {
+    listen 443;
+    server_name www.meducation.net;
     rewrite ^(.*) https://www.meducation.net$1 permanent;
 }
 
