Force naked to redirect to www

--- a/cookbooks/meducation-website/templates/default/nginx.conf.erb
+++ b/cookbooks/meducation-website/templates/default/nginx.conf.erb
@@ -9,7 +9,7 @@ server {
 }
 server {
     listen 443;
-    server_name www.meducation.net;
+    server_name meducation.net;
     rewrite ^(.*) https://www.meducation.net$1 permanent;
 }
 
