--- a/cookbooks/nginx/templates/default/nginx.conf.erb
+++ b/cookbooks/nginx/templates/default/nginx.conf.erb
@@ -4,12 +4,17 @@
 
 user ec2-user;
 worker_processes  <%= @node[:nginx][:worker_processes] %>;
+timer_resolution 500ms;
+worker_rlimit_nofile 10240;
+server_name_in_redirect off;
+server_tokens off;
 
 error_log  /var/log/nginx/error.log;
 pid        /var/run/nginx.pid;
 
 events {
-    worker_connections  1024;
+    use epoll;
+    worker_connections 10240;
 }
 
 http {
