--- a/cookbooks/meducation-api/templates/default/nginx.conf.erb
+++ b/cookbooks/meducation-api/templates/default/nginx.conf.erb
@@ -5,13 +5,13 @@ upstream <%= @name %> {
 server {
     listen 80;
     server_name <%= @server_name %> <%= @redirect_server_names %>;
-    rewrite ^(.*) https://www.meducation.net$1 permanent;
+    rewrite ^(.*) https://<%= @server_name %>$1 permanent;
 }
 <% unless @redirect_server_names.empty? %>
 server {
     listen 443;
     server_name <%= @redirect_server_names %>;
-    rewrite ^(.*) https://www.meducation.net$1 permanent;
+    rewrite ^(.*) https://<%= @server_name %>$1 permanent;
 }
 <% end %>
 
