--- a/cookbooks/meducation-api/templates/default/nginx.conf.erb
+++ b/cookbooks/meducation-api/templates/default/nginx.conf.erb
@@ -7,6 +7,7 @@ server {
     server_name <%= @server_name %> <%= @redirect_server_names %>;
     rewrite ^(.*) https://<%= @server_name %>$1 permanent;
 }
+
 <% unless @redirect_server_names.empty? %>
 server {
     listen 443;
@@ -17,7 +18,7 @@ server {
 
 server {
  
-  listen 443 ssl default;
+  listen 443 ssl;
   server_name <%= @server_name %>;
   root <%= @app_root %>/current/<%= @rails_directory %>/public;
   
