Set rails_root var in unicorn.rb

--- a/cookbooks/meducation-website/templates/default/unicorn.conf.erb
+++ b/cookbooks/meducation-website/templates/default/unicorn.conf.erb
@@ -1,4 +1,5 @@
 app_root = "<%= @app_root %>"
+rails_root = "<%= @rails_root %>"
 
 worker_processes 10
 working_directory "#{app_root}/current/#{@rails_root}"
