--- a/cookbooks/meducation-website/templates/default/unicorn.conf.erb
+++ b/cookbooks/meducation-website/templates/default/unicorn.conf.erb
@@ -1,8 +1,8 @@
 app_root = "<%= @app_root %>"
 rails_root = "<%= @rails_root %>"
 
-worker_processes 10
-working_directory "#{app_root}/current/#{@rails_root}"
+worker_processes 6
+working_directory "#{app_root}/current/#{rails_root}"
 preload_app true
 timeout 300
 listen "#{app_root}/shared/sockets/unicorn.sock", :backlog => 2048
