--- a/cookbooks/meducation-website/templates/default/nginx.conf.erb
+++ b/cookbooks/meducation-website/templates/default/nginx.conf.erb
@@ -4,25 +4,14 @@ upstream <%= @name %> {
 
 server {
     listen 80;
-    server_name <%= @server_name %> <%= @redirect_server_names %>;
-    rewrite ^(.*) https://<%= @server_name %>$1 permanent;
+    server_name <%= @server_name %>;
+    return 301 https://<%= @server_name %>$request_uri;
 }
 
 <% unless @redirect_server_names.empty? %>
 server {
-    listen 443;
-    server_name <%= @redirect_server_names %>;
-    rewrite ^(.*) https://<%= @server_name %>$1 permanent;
-  
-    ssl                  on;
-    ssl_certificate      /etc/nginx/certs/<%= @name %>.chained.crt;
-    ssl_certificate_key  /etc/nginx/certs/<%= @name %>.key;
-
-    ssl_session_timeout  5m;
-
-    ssl_protocols  SSLv2 SSLv3 TLSv1;
-    ssl_ciphers  HIGH:!aNULL:!MD5;
-    ssl_prefer_server_ciphers   on;
+  server_name <%= @redirect_server_names %>;
+  return 301 https://<%= @server_name %>$request_uri;
 }
 <% end %>
 
