--- a/cookbooks/meducation-website/templates/default/nginx.conf.erb
+++ b/cookbooks/meducation-website/templates/default/nginx.conf.erb
@@ -17,7 +17,8 @@ server {
 
 server {
  
-  listen 443 ssl;
+  listen 443;
+  ssl on;
   server_name <%= @server_name %>;
   root <%= @app_root %>/current/<%= @rails_root %>/public;
   
@@ -38,13 +39,12 @@ server {
 
   location / {
   
-    proxy_set_header HOST $host;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
-    proxy_set_header Host $http_host;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header Host $host;
 
-    proxy_pass http://<%= @name %>;
+    proxy_pass https://<%= @name %>;
     proxy_redirect off;
   }
 
