--- a/cookbooks/meducation-website/templates/default/nginx.conf.erb
+++ b/cookbooks/meducation-website/templates/default/nginx.conf.erb
@@ -10,6 +10,12 @@ server {
 
 <% unless @redirect_server_names.empty? %>
 server {
+  listen 80;
+  server_name <%= @redirect_server_names %>;
+  return 301 https://<%= @server_name %>$request_uri;
+}
+server {
+  listen 443;
   server_name <%= @redirect_server_names %>;
   return 301 https://<%= @server_name %>$request_uri;
 }
