--- a/cookbooks/meducation-website/templates/default/nginx.conf.erb
+++ b/cookbooks/meducation-website/templates/default/nginx.conf.erb
@@ -18,6 +18,16 @@ server {
   listen 443 default_server;
   server_name <%= @redirect_server_names %>;
   return 301 https://<%= @server_name %>$request_uri;
+  
+  ssl                  on;
+  ssl_certificate      /etc/nginx/certs/<%= @name %>.chained.crt;
+  ssl_certificate_key  /etc/nginx/certs/<%= @name %>.key;
+
+  ssl_session_timeout  5m;
+
+  ssl_protocols  SSLv2 SSLv3 TLSv1;
+  ssl_ciphers  HIGH:!aNULL:!MD5;
+  ssl_prefer_server_ciphers   on;
 }
 <% end %>
 
