--- a/cookbooks/nginx/templates/default/nginx.conf.erb
+++ b/cookbooks/nginx/templates/default/nginx.conf.erb
@@ -18,6 +18,8 @@ events {
 http {
     include /etc/nginx/mime.types;
 
+    client_body_temp_path "/var/spool/nginx-client-body 1 2"
+
     default_type application/octet-stream;
 
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
