--- a/cookbooks/nginx/templates/default/nginx.conf.erb
+++ b/cookbooks/nginx/templates/default/nginx.conf.erb
@@ -18,7 +18,7 @@ events {
 http {
     include /etc/nginx/mime.types;
 
-    client_body_temp_path "/var/spool/nginx-client-body 1 2"
+    #client_body_temp_path "/var/spool/nginx-client-body 1 2"
 
     default_type application/octet-stream;
 
