Try to get nginx to handle large files

--- a/cookbooks/meducation-website/templates/default/nginx.conf.erb
+++ b/cookbooks/meducation-website/templates/default/nginx.conf.erb
@@ -52,7 +52,7 @@ server {
   ssl_ciphers  HIGH:!aNULL:!MD5;
   ssl_prefer_server_ciphers   on;
 
-  proxy_max_temp_file_size 0
+  proxy_max_temp_file_size 0;
 
   location / {
   
