--- a/cookbooks/meducation-website/templates/default/nginx.conf.erb
+++ b/cookbooks/meducation-website/templates/default/nginx.conf.erb
@@ -16,6 +16,10 @@ server {
   server_name <%= @server_name %>;
   root <%= @app_root %>/current/<%= @rails_root %>/public;
 
+  if ($http_x_forwarded_proto = http) {
+    return 301 https://www.meducation.net$request_uri;
+  }
+
   client_max_body_size 4g;
 
   access_log <%= @app_root %>/shared/log/access.log combined;
@@ -24,11 +28,6 @@ server {
   proxy_max_temp_file_size 0;
 
   location / {
-
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-    proxy_set_header Host $host;
 
     proxy_pass http://<%= @name %>;
     proxy_redirect off;
