--- a/cookbooks/meducation-website/templates/default/nginx.conf.erb
+++ b/cookbooks/meducation-website/templates/default/nginx.conf.erb
@@ -16,6 +16,9 @@ server {
   server_name <%= @server_name %>;
   root <%= @app_root %>/current/<%= @rails_root %>/public;
 
+  proxy_read_timeout 5m;
+  proxy_send_timeout 5m;
+
   if ($http_x_forwarded_proto = http) {
     return 301 https://www.meducation.net$request_uri;
   }
